--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~43.0.0",
     "expo-asset": "~8.4.3",
+    "expo-barcode-scanner": "~11.1.2",
     "expo-constants": "~12.1.2",
     "expo-font": "~10.0.3",
     "expo-linking": "~2.4.2",
@@ -27,6 +28,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-barcode-mask": "^1.2.4",
+    "react-native-camera": "^4.2.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1"
