--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "^17.0.31",
     "@types/react-native": "~0.64.12",
     "jest-expo": "~43.0.0",
     "typescript": "~4.3.5"
