--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-super-grid": "^4.1.3",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
